try to get it working with importing straight from git

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "version:pr": "node ./config/version-pr",
-    "generate-providers": "node ./config/generate-providers.js"
+    "generate-providers": "node ./config/generate-providers.js",
+    "postinstall": "tsc --outDir ./build"
   },
   "files": [
     "lib",
